# Vespera

./: .env  .env.example  .gitignore  Cargo.toml  README.md  agent.toml.example  docker-compose.yml
agent/: Cargo.toml  Dockerfile
agent/examples/: collect_metrics.rs
agent/src/: collector.rs  config.rs  lib.rs  reporter.rs  service_checker.rs
common/: Cargo.toml
common/src/: error.rs  lib.rs  metrics.rs  node.rs  request.rs  response.rs  service.rs  user.rs  ws_message.rs
migrations/sqlite/: 20250116000001_init.sql
scripts/: server-dev.sh
server/: .env.example  Cargo.toml  Dockerfile
server/migrations/: 20250116000001_init.sql  20250117000001_add_users.sql  20250118000001_create_alerts.sql  20250119000001_create_services.sql  20250201000001_add_visibility_flags.sql
server/src/: app.rs  cleanup.rs  error.rs  health_check.rs  main.rs  mod.rs  openapi.rs  state.rs  test_utils.rs
server/src/alert/: engine.rs  mod.rs  models.rs  state.rs
server/src/db/: alert_repo.rs  error.rs  mod.rs  models.rs  repo.rs  service_repo.rs  user_repo.rs
server/src/handlers/: mod.rs
server/src/middleware/: auth.rs  mod.rs
server/src/routes/: health.rs
server/src/routes/api/v1/: alerts.rs  auth.rs  mod.rs  nodes.rs  report.rs  services.rs  users.rs
server/src/utils/: jwt.rs  mod.rs  password.rs
server/src/ws/: broadcaster.rs  handler.rs  mod.rs
src/: main.rs
src/common/: error.rs  mod.rs
src/config/: settings.rs
src/server/: app.rs  error.rs  mod.rs  state.rs
src/server/db/: error.rs  mod.rs
src/server/middleware/: auth.rs  mod.rs
src/server/routes/: health.rs  mod.rs
src/server/routes/api/v1/: nodes.rs  report.rs
web/: package.json  pnpm-lock.yaml  vite.config.ts
web/src/: App.svelte
web/src/lib/: Login.svelte  MetricsChart.svelte  ServerCard.svelte  ServerDetail.svelte  ServiceCard.svelte  StatusOverview.svelte  ThemeToggle.svelte  UserMenu.svelte  api.ts  authStorage.ts  authStore.ts  router.ts  types.ts  websocket.ts  wsStore.ts
web/src/lib/admin/: AdminLayout.svelte  NodeModal.svelte  ServiceModal.svelte  UserModal.svelte
web/src/routes/: Dashboard.svelte  Login.svelte  NotFound.svelte  ServerDetail.svelte
web/src/routes/admin/: AdminPanel.svelte  NodeManagement.svelte  ServiceManagement.svelte  Settings.svelte  UserManagement.svelte
