[package]
name = "Vespera"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web Framework
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1", "http2"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Time
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
