[workspace]
members = ["agent", "server", "common"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Vespera Team"]

[workspace.dependencies]
# Async Runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "signal", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

# UUID
uuid = { version = "1.6", features = ["v4", "serde"] }

[profile.release]
opt-level = "z"           # 优化二进制大小
lto = "fat"               # Full Link Time Optimization
codegen-units = 1         # 单编译单元,更好的优化
strip = true              # 移除符号表
panic = "abort"           # 减少 unwinding 代码大小
overflow-checks = false   # 关闭溢出检查
incremental = false       # 关闭增量编译

[profile.release.package."*"]
opt-level = "z"           # 对所有依赖也进行大小优化
strip = true
