[package]
name = "vespera-agent"
version.workspace = true
edition.workspace = true

[lib]
name = "vespera_agent"
path = "src/lib.rs"

[[bin]]
name = "vespera-agent"
path = "src/bin/agent.rs"

[dependencies]
vespera-common = { path = "../common" }

# System Information
sysinfo = "0.32"

# Async Runtime (精简 features for agent)
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "signal"] }

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging (精简 features)
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "ansi", "env-filter"] }

# Time
chrono = { workspace = true }

# Configuration
toml = "0.8"
hostname = "0.4"
uuid = { workspace = true }
local-ip-address = "0.6"
