[package]
name = "vespera-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vespera-server"
path = "src/main.rs"

[dependencies]
vespera-common = { path = "../common" }

# Web Framework
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1", "http2"] }
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate", "macros"] }
uuid = { workspace = true }
