[package]
name = "vespera-server"
version.workspace = true
edition.workspace = true

[[bin]]
name = "vespera-server"
path = "src/main.rs"

[dependencies]
vespera-common = { path = "../common" }

# Web Framework
axum = { version = "0.8", default-features = false, features = ["json", "tokio", "http1", "http2", "ws"] }
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["trace", "cors"] }
futures-util = "0.3"

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error Handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Time
chrono = { workspace = true }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono", "migrate", "macros"] }
uuid = { workspace = true }

# Authentication & Security
argon2 = "0.5"                       # 密码哈希 (OWASP 推荐)
jsonwebtoken = "9"                   # JWT 签名/验证
sha2 = "0.10"                        # SHA-256 (用于 refresh token 哈希)
rand = "0.8"                         # 生成随机 token
base64 = "0.22"                      # Base64 编码

# HTTP utilities
axum-extra = { version = "0.9", features = ["typed-header"] }
async-trait = "0.1.89"  # 用于提取 Authorization header

# OpenAPI Documentation
utoipa = { version = "5.4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-scalar = { version = "0.3", features = ["axum"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# Environment Variables
dotenvy = "0.15"
